--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -1784,14 +1784,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 525,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Cerberus Hemisphere Enhanced': 'https://marshemispheres.com/images/full.jpg', 'Schiaparelli Hemisphere Enhanced': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg', 'Syrtis Major Hemisphere Enhanced': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg', 'Valles Marineris Hemisphere Enhanced': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}\n"
+      "[{'Cerberus Hemisphere Enhanced': 'https://marshemispheres.com/images/full.jpg', 'Schiaparelli Hemisphere Enhanced': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg', 'Syrtis Major Hemisphere Enhanced': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg', 'Valles Marineris Hemisphere Enhanced': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}]\n"
      ]
     }
    ],
@@ -1801,7 +1801,8 @@
     "hemisphere_image_urls = {}\n",
     "for A, B in zip(titles_list, full_urls):\n",
     "    hemisphere_image_urls[A] = B\n",
-    "print(hemisphere_image_urls)"
+    "hemisphere_image_urls = [hemisphere_image_urls]\n",
+    "print(hemisphere_image_urls)\n"
    ]
   },
   {
